<FrameLayout android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top|center"
            android:layout_gravity="top|center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_our_app"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:fontFamily="@font/museo_semi_bold"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/share_your_experience_with_us"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/museo_regular"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="top|center"
                android:paddingTop="30dp"
                android:paddingBottom="20dp">
                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:progressBackgroundTint="@color/gray"
                    android:progressTint="@color/cardColorYellow"
                    android:rating="4"
                    android:stepSize="1"
                    tools:targetApi="lollipop" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:useMaterialThemeColors="false"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/museo_semi_bold"
                    android:text="@string/submit"
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/white"
                    tools:targetApi="m" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_skip"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no_thanks"
                    android:textColor="@color/white"
                    android:background="@drawable/round_corner_transparent"
                    android:backgroundTint="@color/gray"
                    android:fontFamily="@font/museo_regular"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </LinearLayout>
</FrameLayout>
