<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="30dp"
    tools:context=".ui.activity.FrontLogin">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="15dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/museo_semi_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museo_regular"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museo_semi_bold"
        android:onClick="Forgot"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museo_semi_bold"
        android:onClick="Create"
        android:text="@string/create_account"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/msg"
        tools:layout_editor_absoluteX="30dp">

        <com.ornach.richtext.RichView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp"
            app:rt_backgroundColor="#F2F4F6"
            app:rt_radius="3dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/gray"
                app:boxBackgroundMode="none"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                app:hintTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.ornach.richtext.RichView>

        <com.ornach.richtext.RichView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="3dp"
            app:rt_backgroundColor="#F2F4F6"
            app:rt_radius="3dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                app:boxBackgroundMode="none"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                app:hintTextColor="@color/gray"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.ornach.richtext.RichView>

        <com.ornach.nobobutton.NoboButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="Login"
            android:padding="13dp"
            app:nb_backgroundColor="@color/colorAccent"
            app:nb_radius="3dp"
            app:nb_text="Login"
            app:nb_textColor="@android:color/white"
            app:nb_textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
