<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:background="@drawable/card_bg"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_20dp"
        android:src="@drawable/web"
        app:riv_corner_radius="8dp"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_toEndOf="@id/image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:text="@string/website"
        android:fontFamily="@font/museo_semi_bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/tvdesc"
        android:layout_below="@id/tvName"
        android:layout_toEndOf="@id/image"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/museo_regular"
        android:text="@string/read_article_subtitle"
        android:textSize="12sp"
        android:maxLines="2"
        android:layout_marginBottom="5dp"
        tools:ignore="RelativeOverlap,SmallSp,SpUsage" />

    <RelativeLayout
        android:id="@+id/layout_coin"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:background="@drawable/bg_balance"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp" >

        <ImageView
            android:id="@+id/icons"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_centerVertical="true"
            android:src="@drawable/coin"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/coins"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/icons"
            android:fontFamily="@font/museo_semi_bold"
            android:gravity="center"
            android:text="@string/_00000"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimary"
        android:layout_below="@id/image"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>
