<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/colorPrimary"
    tools:ignore="MissingConstraints">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/animationView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:src="@drawable/logout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/animationView"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/congrts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/museo_semi_bold"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/museo_regular"
                    android:gravity="center"
                    android:text="@string/are_you_sure_you_want_to_logout"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/no"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:background="@drawable/card_bg"
                        android:elevation="4dp"
                        android:layout_marginEnd="@dimen/margin_10dp"
                        android:padding="10dp"
                        android:text="@string/no"
                        android:fontFamily="@font/museo_regular"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        tools:targetApi="lollipop" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/yes"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:backgroundTint="@color/colorAccent"
                        android:background="@drawable/card_bg"
                        android:fontFamily="@font/museo_semi_bold"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:text="@string/yes"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        tools:targetApi="lollipop" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
</androidx.cardview.widget.CardView>
