<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/colorPrimary"
    tools:ignore="MissingConstraints">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/animationView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:src="@drawable/ic_info" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/animationView"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/congrts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/museo_semi_bold"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/logout"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/museo_regular"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="17sp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/close"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:background="@drawable/btn_bg"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:fontFamily="@font/museo_regular"
                        android:text="@string/okay"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        tools:targetApi="lollipop" />
            </LinearLayout>
        </RelativeLayout>
</androidx.cardview.widget.CardView>
